--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "lint": "eslint . --fix",
+    "format": "prettier --write",
     "preview": "vite preview",
     "prepare": "husky install"
   },
   "dependencies": {
+    "clsx": "^1.1.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
@@ -22,7 +26,10 @@
     "autoprefixer": "^10.4.4",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.7",
     "postcss": "^8.4.12",
